Production deployment: Add env variables, SSL config, domain setup, and build optimizations
- Add environment variables for token sale configuration
- Configure Vite for production with allowed hosts
- Add deployment script for easy updates
- Update components to use env variables (BuyTokens, TokenSaleProgress, TopInvestors)
- Add whitepaper PDF to public assets
- Configure for metah20.io, www.metah20.io, and ico.metah20.io domains
- Set up production build pipeline

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HydraICO - Next Generation Token Sale Platform</title>
-    <meta name="description" content="Join the future of DeFi with HydraICO. Secure your position in the revolutionary Hydra blockchain ecosystem powered by Solana's lightning-fast network." />
-    <meta name="author" content="HydraICO" />
+    <title>Meta H20 ICO - Next Generation Token Sale Platform</title>
+    <meta name="description" content="Join the future of DeFi with MH2O. Secure your position in the revolutionary MH2O blockchain ecosystem powered by Solana's lightning-fast network." />
+    <meta name="author" content="MH2O" />
 
-    <meta property="og:title" content="HydraICO - Next Generation Token Sale Platform" />
-    <meta property="og:description" content="Join the future of DeFi with HydraICO. Secure your position in the revolutionary Hydra blockchain ecosystem." />
+    <meta property="og:title" content="Meta H20 ICO - Next Generation Token Sale Platform" />
+    <meta property="og:description" content="Join the future of DeFi with MH2O. Secure your position in the revolutionary MH2O blockchain ecosystem." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://ipfs.io/ipfs/bafkreibqgk3tpekp2cns3n3fo5cvfo56grrmnczrewhhdx7g36jwix6zae" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@MH2O" />
+    <meta name="twitter:image" content="https://ipfs.io/ipfs/bafkreibqgk3tpekp2cns3n3fo5cvfo56grrmnczrewhhdx7g36jwix6zae" />
   </head>
 
   <body>
